--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -7,6 +7,7 @@
         <item name="colorPrimary">@color/teal_200</item>
         <item name="colorPrimaryVariant">@color/teal_200</item>
         <item name="colorOnPrimary">@color/white</item>
+        <item name="fontFamily">@font/Poppins-Thin.ttf</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
@@ -32,5 +33,24 @@
         <!--        <item name="colorAccent"></item>-->
         <item name="android:windowBackground">@drawable/launch_background</item>
 
+    </style>
+
+    <style name="darkText">
+        <item name="android:textSize">17sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">@color/primaryDark</item>
+    </style>
+
+    <style name="lightText">
+        <item name="android:textSize">12sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">@color/naturalgrey</item>
+    </style>
+
+    <style name="lightButtonBackground">
+<!--        <item name="backgroundColor">@color/white</item>-->
+<!--        <item name="colorPrimary">@color/black</item>-->
+<!--        <item name="colorPrimaryVariant">@color/black</item>-->
+        <item name="colorSecondary">@color/black</item>
     </style>
 </resources>
