--- a/app/src/main/res/layout/fragment_change_password.xml
+++ b/app/src/main/res/layout/fragment_change_password.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
     tools:context=".ui.fragments.auth.ChangePasswordFragment"
 
     >
@@ -32,16 +30,15 @@
         style="@style/darkText"
         />
 
-    <EditText
-        android:id="@+id/auth_email"
-        android:layout_width="match_parent"
-        android:layout_height="45dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginStart="15dp"
-        android:layout_marginEnd="15dp"
-        android:inputType="textEmailAddress"
-        android:background="@drawable/edit_text_shape"
-        />
+<!--    <EditText-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="45dp"-->
+<!--        android:layout_marginTop="5dp"-->
+<!--        android:layout_marginStart="15dp"-->
+<!--        android:layout_marginEnd="15dp"-->
+<!--        android:inputType="textEmailAddress"-->
+<!--        android:background="@drawable/edit_text_shape"-->
+<!--        />-->
 
     <TextView
         android:layout_width="wrap_content"
@@ -51,15 +48,15 @@
         style="@style/darkText"
         />
 
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="45dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginStart="15dp"
-        android:layout_marginEnd="15dp"
-        android:inputType="textEmailAddress"
-        android:background="@drawable/edit_text_shape"
-        />
+<!--    <EditText-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="45dp"-->
+<!--        android:layout_marginTop="5dp"-->
+<!--        android:layout_marginStart="15dp"-->
+<!--        android:layout_marginEnd="15dp"-->
+<!--        android:inputType="textEmailAddress"-->
+<!--        android:background="@drawable/edit_text_shape"-->
+<!--        />-->
 
     <TextView
         android:layout_width="wrap_content"
@@ -69,15 +66,15 @@
         style="@style/darkText"
         />
 
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="45dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginStart="15dp"
-        android:layout_marginEnd="15dp"
-        android:inputType="textEmailAddress"
-        android:background="@drawable/edit_text_shape"
-        />
+<!--    <EditText-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="45dp"-->
+<!--        android:layout_marginTop="5dp"-->
+<!--        android:layout_marginStart="15dp"-->
+<!--        android:layout_marginEnd="15dp"-->
+<!--        android:inputType="textEmailAddress"-->
+<!--        android:background="@drawable/edit_text_shape"-->
+<!--        />-->
 
     <Button
         android:layout_width="match_parent"
