--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -7,7 +7,7 @@
         <item name="colorPrimary">@color/teal_200</item>
         <item name="colorPrimaryVariant">@color/teal_200</item>
         <item name="colorOnPrimary">@color/white</item>
-        <item name="fontFamily">@font/Poppins-Thin.ttf</item>
+<!--        <item name="fontFamily">@font/Poppins-Thin.ttf</item>-->
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
@@ -47,10 +47,5 @@
         <item name="android:textColor">@color/naturalgrey</item>
     </style>
 
-    <style name="lightButtonBackground">
-<!--        <item name="backgroundColor">@color/white</item>-->
-<!--        <item name="colorPrimary">@color/black</item>-->
-<!--        <item name="colorPrimaryVariant">@color/black</item>-->
-        <item name="colorSecondary">@color/black</item>
-    </style>
+
 </resources>
