edit design of screens

--- a/app/src/main/res/layout/fragment_change_password.xml
+++ b/app/src/main/res/layout/fragment_change_password.xml
@@ -9,20 +9,35 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:layout_marginStart="16dp"
+    android:layout_marginEnd="16dp"
     >
-    <TextView
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Change Password"
-        android:layout_margin="15dp"
-        style="@style/darkText"
-        />
+        android:orientation="horizontal"
+        >
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_back"
+            android:layout_gravity="center"
+            />
+        <androidx.appcompat.widget.AppCompatTextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Change Password"
+            android:layout_margin="15dp"
+            style="@style/darkText"
+            />
+    </LinearLayout>
+
     <LinearLayout
         android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="@color/naturalgrey"/>
-    <TextView
+        android:background="@color/Neutral_Light"/>
+    <androidx.appcompat.widget.AppCompatTextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Old Password"
@@ -30,35 +45,40 @@
         style="@style/darkText"
         />
 
-<!--    <EditText-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="45dp"-->
-<!--        android:layout_marginTop="5dp"-->
-<!--        android:layout_marginStart="15dp"-->
-<!--        android:layout_marginEnd="15dp"-->
-<!--        android:inputType="textEmailAddress"-->
-<!--        android:background="@drawable/edit_text_shape"-->
-<!--        />-->
+    <androidx.appcompat.widget.AppCompatEditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:inputType="textEmailAddress"
+        android:background="@drawable/edit_text_shape"
+        style="@style/editTextStyle"
+        android:drawableStart="@drawable/ic_password"
+        android:paddingStart="10dp"
+        android:hint="***************"
+        />
 
-    <TextView
+    <androidx.appcompat.widget.AppCompatTextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="New password"
         android:layout_margin="15dp"
         style="@style/darkText"
+
         />
 
-<!--    <EditText-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="45dp"-->
-<!--        android:layout_marginTop="5dp"-->
-<!--        android:layout_marginStart="15dp"-->
-<!--        android:layout_marginEnd="15dp"-->
-<!--        android:inputType="textEmailAddress"-->
-<!--        android:background="@drawable/edit_text_shape"-->
-<!--        />-->
+    <androidx.appcompat.widget.AppCompatEditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:inputType="textEmailAddress"
+        android:background="@drawable/edit_text_shape"
+        style="@style/editTextStyle"
+        android:drawableStart="@drawable/ic_password"
+        android:paddingStart="10dp"
+        android:hint="***************"
+        />
 
-    <TextView
+    <androidx.appcompat.widget.AppCompatTextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="New password again"
@@ -66,15 +86,17 @@
         style="@style/darkText"
         />
 
-<!--    <EditText-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="45dp"-->
-<!--        android:layout_marginTop="5dp"-->
-<!--        android:layout_marginStart="15dp"-->
-<!--        android:layout_marginEnd="15dp"-->
-<!--        android:inputType="textEmailAddress"-->
-<!--        android:background="@drawable/edit_text_shape"-->
-<!--        />-->
+    <androidx.appcompat.widget.AppCompatEditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:inputType="textEmailAddress"
+        android:hint="***************"
+        android:background="@drawable/edit_text_shape"
+        style="@style/editTextStyle"
+        android:drawableStart="@drawable/ic_password"
+        android:paddingStart="10dp"
+        />
 
     <Button
         android:layout_width="match_parent"
