--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -2,117 +2,126 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".ui.fragments.auth.RegisterFragment">
-    <androidx.core.widget.NestedScrollView
+
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        >
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:gravity="center_horizontal"
-        >
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/logo"
-        android:layout_marginTop="30dp"
-        />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/txt_msg"
-        android:layout_marginTop="16dp"
-        style="@style/darkText"
-        />
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Create a new account"
-        android:layout_marginTop="7dp"
-        style="@style/lightText"
-        />
-
-<!--    <EditText-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="45dp"-->
-<!--        android:layout_marginTop="20dp"-->
-<!--        android:layout_marginStart="15dp"-->
-<!--        android:layout_marginEnd="15dp"-->
-<!--        android:hint="  full name"-->
-<!--        android:inputType="text"-->
-<!--        android:background="@drawable/edit_text_shape"-->
-<!--        />-->
-
-<!--    <EditText-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="45dp"-->
-<!--        android:layout_marginTop="15dp"-->
-<!--        android:layout_marginStart="15dp"-->
-<!--        android:layout_marginEnd="15dp"-->
-<!--        android:hint="  your email"-->
-<!--        android:inputType="textEmailAddress"-->
-<!--        android:background="@drawable/edit_text_shape"-->
-<!--        />-->
-
-<!--        <EditText-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="45dp"-->
-<!--            android:layout_marginTop="15dp"-->
-<!--            android:layout_marginStart="15dp"-->
-<!--            android:layout_marginEnd="15dp"-->
-<!--            android:hint="  password"-->
-<!--            android:inputType="textPassword"-->
-<!--            android:background="@drawable/edit_text_shape"-->
-<!--            />-->
-
-<!--        <EditText-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="45dp"-->
-<!--            android:layout_marginTop="15dp"-->
-<!--            android:layout_marginStart="15dp"-->
-<!--            android:layout_marginEnd="15dp"-->
-<!--            android:hint="  password again"-->
-<!--            android:inputType="textPassword"-->
-<!--            android:background="@drawable/edit_text_shape"-->
-<!--            />-->
-
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="Sign Up"
-            android:layout_marginEnd="15dp"
-            android:layout_marginStart="15dp"
-            android:layout_marginTop="30dp"
-            android:textStyle="bold"
-            android:background="@drawable/button_background"
-            />
+        android:layout_height="match_parent">
 
         <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="have a account?"
-                android:layout_marginTop="10dp"
-                android:textColor="@color/naturalgrey"
-                android:textSize="16sp"
-                />
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="  Sign in"
-                android:textColor="@color/teal_200"
-                android:layout_marginTop="10dp"
-                android:textStyle="bold"
-                />
-        </LinearLayout>
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
+            android:gravity="center_horizontal"
+            android:orientation="vertical">
 
-    </LinearLayout>
-    </androidx.core.widget.NestedScrollView>
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="50dp"
+                android:src="@drawable/logo" />
+
+            <androidx.appcompat.widget.AppCompatTextView
+                style="@style/darkText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:text="@string/txt_msg"
+                android:paddingStart="10dp"
+                />
+
+            <androidx.appcompat.widget.AppCompatTextView
+                style="@style/lightText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="7dp"
+                android:text="Create a new account" />
+
+            <androidx.appcompat.widget.AppCompatEditText
+                style="@style/editTextStyle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:background="@drawable/edit_text_shape"
+                android:hint="full name"
+                android:drawableStart="@drawable/ic_person"
+                android:inputType="text"
+                android:paddingStart="10dp"
+                />
+
+            <androidx.appcompat.widget.AppCompatEditText
+                style="@style/editTextStyle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
+                android:background="@drawable/edit_text_shape"
+                android:hint="your email"
+                android:drawableStart="@drawable/ic_email"
+                android:inputType="textEmailAddress"
+                android:paddingStart="10dp"
+                />
+
+            <androidx.appcompat.widget.AppCompatEditText
+                style="@style/editTextStyle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
+                android:background="@drawable/edit_text_shape"
+                android:hint="password"
+                android:drawableStart="@drawable/ic_password"
+                android:inputType="textPassword"
+                android:paddingStart="10dp"
+
+                />
+
+            <androidx.appcompat.widget.AppCompatEditText
+                style="@style/editTextStyle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
+                android:background="@drawable/edit_text_shape"
+                android:hint="password again"
+                android:drawableStart="@drawable/ic_password"
+                android:inputType="textPassword"
+                android:paddingStart="10dp"
+                />
+
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginStart="15dp"
+                android:layout_marginTop="30dp"
+                android:layout_marginEnd="15dp"
+                android:background="@drawable/button_background"
+                android:text="Sign Up"
+                android:fontFamily="@font/poppins_bold"
+                 />
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:text="have an account?"
+                    style="@style/lightText"
+                    android:textColor="@color/naturalgrey"
+                    android:textSize="16sp" />
+
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:text="  Sign in"
+                    style="@style/primaryDarkText"
+                    />
+            </LinearLayout>
+
+        </LinearLayout>
+    </ScrollView>
 
 
 </layout>
