--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -36,15 +36,48 @@
     </style>
 
     <style name="darkText">
-        <item name="android:textSize">17sp</item>
-        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">16sp</item>
+       <item name="fontFamily">@font/poppins_bold</item>
         <item name="android:textColor">@color/primaryDark</item>
+    </style>
+    <style name="primaryDarkText">
+        <item name="android:textColor">@color/teal_200</item>
+        <item name="fontFamily">@font/poppins_bold</item>
+        <item name="android:textSize">14sp</item>
     </style>
 
     <style name="lightText">
         <item name="android:textSize">12sp</item>
-        <item name="android:textStyle">bold</item>
+        <item name="fontFamily">@font/poppins_regular</item>
         <item name="android:textColor">@color/naturalgrey</item>
+    </style>
+
+    <style name="editTextStyle">
+        <item name="android:fontFamily">@font/poppins_regular</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:textColor">@color/naturalgrey</item>
+        <item name="hintTextColor">@color/naturalgrey</item>
+        <item name="paddingStart">16dp</item>
+        <item name="paddingEnd">16dp</item>
+        <item name="android:paddingTop">8dp</item>
+        <item name="android:paddingBottom">8dp</item>
+        <item name="background">@drawable/edit_text_shape</item>
+        <item name="android:drawablePadding">10dp</item>
+        <item name="android:drawableLeft">10dp</item>
+    </style>
+
+    <style name="socialMediaStyleBtn">
+        <item name="android:textColor">@color/naturalgrey</item>
+        <item name="fontFamily">@font/poppins_bold</item>
+        <item name="textAllCaps">false</item>
+        <item name="android:padding">16dp</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">56dp</item>
+        <item name="android:gravity">center</item>
+        <item name="android:fontFamily">@font/poppins_bold</item>
+        <item name="android:textSize">14sp</item>
+        <item name="background">@drawable/edit_text_shape</item>
+
     </style>
 
 
