--- a/app/src/main/res/layout/fragment_change_password.xml
+++ b/app/src/main/res/layout/fragment_change_password.xml
@@ -51,7 +51,7 @@
         android:layout_marginTop="5dp"
         android:inputType="textEmailAddress"
         android:background="@drawable/edit_text_shape"
-        style="@style/editTextStyle"
+        android:padding="12dp"
         android:drawableStart="@drawable/ic_password"
         android:paddingStart="10dp"
         android:hint="***************"
@@ -72,7 +72,7 @@
         android:layout_marginTop="5dp"
         android:inputType="textEmailAddress"
         android:background="@drawable/edit_text_shape"
-        style="@style/editTextStyle"
+        android:padding="13dp"
         android:drawableStart="@drawable/ic_password"
         android:paddingStart="10dp"
         android:hint="***************"
@@ -93,7 +93,7 @@
         android:inputType="textEmailAddress"
         android:hint="***************"
         android:background="@drawable/edit_text_shape"
-        style="@style/editTextStyle"
+        android:padding="13dp"
         android:drawableStart="@drawable/ic_password"
         android:paddingStart="10dp"
         />
