--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -38,7 +38,7 @@
                 android:text="Create a new account" />
 
             <androidx.appcompat.widget.AppCompatEditText
-                style="@style/editTextStyle"
+             android:padding="12dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
@@ -50,7 +50,7 @@
                 />
 
             <androidx.appcompat.widget.AppCompatEditText
-                style="@style/editTextStyle"
+                android:padding="12dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="15dp"
@@ -62,7 +62,7 @@
                 />
 
             <androidx.appcompat.widget.AppCompatEditText
-                style="@style/editTextStyle"
+                android:padding="12dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="15dp"
@@ -75,7 +75,7 @@
                 />
 
             <androidx.appcompat.widget.AppCompatEditText
-                style="@style/editTextStyle"
+                android:padding="13dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="15dp"
